[gd_scene load_steps=4 format=3 uid="uid://llc5dayvldkd"]

[ext_resource type="Script" uid="uid://d01eus5cvfa8x" path="res://scripts/cell.gd" id="1_upbjj"]
[ext_resource type="Texture2D" uid="uid://dqofs23yonsfy" path="res://assets/infected_tile_overlay.png" id="2_0s7o3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ngbm"]
size = Vector2(2, 9.203125)

[node name="Cell" type="Node2D"]
script = ExtResource("1_upbjj")

[node name="InfectedIndicator" type="TextureRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_0s7o3")

[node name="Top" type="Area2D" parent="." groups=["cell"]]
position = Vector2(0, -4)
collision_layer = 8
collision_mask = 22

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_6ngbm")

[node name="Bottom" type="Area2D" parent="."]
position = Vector2(0, 4)
collision_layer = 8
collision_mask = 22

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_6ngbm")

[node name="Left" type="Area2D" parent="."]
position = Vector2(-4, 0)
rotation = 1.5708
collision_layer = 8
collision_mask = 22

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2(1.085997e-05, 2.3984375)
shape = SubResource("RectangleShape2D_6ngbm")

[node name="Right" type="Area2D" parent="."]
position = Vector2(4, 0)
rotation = -1.5708
collision_layer = 8
collision_mask = 22

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2(-1.0859971e-05, 3)
shape = SubResource("RectangleShape2D_6ngbm")

[connection signal="body_entered" from="Top" to="." method="_on_top_body_entered"]
[connection signal="body_exited" from="Top" to="." method="_on_top_body_exited"]
[connection signal="body_entered" from="Bottom" to="." method="_on_bottom_body_entered"]
[connection signal="body_entered" from="Left" to="." method="_on_left_body_entered"]
[connection signal="body_entered" from="Right" to="." method="_on_right_body_entered"]
